package ucf.assignments;

import javafx.event.ActionEvent;

public class DisplayAllController {
    public void loadCompleteList(ActionEvent actionEvent) {
    }
    // load all availble items within a list

    // if (localStorage.getItem(ToDO) == NULL -> then print no data available
    // else get the ToDos from JSON.Parse.LocalStorage.getitem(ToDo)
    // afterwards ToDo.load (todo)



}
