package ucf.assignments;

import javafx.event.ActionEvent;

public class DisplayIncompletedListController {
    public void loadIncompleteList(ActionEvent actionEvent) {

        // load completeditems within a list

        // if (localStorage.getItem(ToDO) == NULL -> then print no data available
        // else first check through the array of items in the ToDo List
        // Anytime Boolean itemDone == false -> loan the data from Json
        //  get the ToDos from JSON.Parse.LocalStorage.getitem(ToDo)
        // afterwards ToDo.load (todo)
    }
}
